scripts/k8s_vap/a2test_annotation_contains_any_v2/3_deploy1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  annotations:
    good1: value1
  labels:
    app: my-dep
    prohibit1: value1
    prohibit2: value2
  name: my-dep
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-dep
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      annotations:
        good2: value1
      labels:
        app: my-dep
        prohibit4: any
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
